// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationField/Desktop Context AutoFocusWithMultipleControls smoke-test 1`] = `
<div>
  <input id="example"
         value="Enter text"
  >
  <button type="button">
    Click me!
  </button>
  <div class="styled__InputGroup-sc-xahsq2-7 erfoji"
       role="group"
  >
    <button aria-controls="from-listbox"
            aria-expanded="false"
            aria-label="Toggle displaying the list of suggested locations"
            tabindex="-1"
            class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
    >
      <svg viewbox="0 0 512 512"
           height="13"
           width="13"
           aria-hidden="true"
           focusable="false"
           fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
      >
        <path fill="currentColor"
              d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
        >
        </path>
      </svg>
    </button>
    <input aria-autocomplete="list"
           aria-controls="from-listbox"
           aria-expanded="false"
           aria-haspopup="listbox"
           aria-invalid="false"
           aria-label="Select from location"
           aria-required="false"
           class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
           placeholder="Select from location"
           role="combobox"
           value
    >
    <span role="status"
          class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
    >
    </span>
    <ul aria-hidden="true"
        aria-label="Suggested locations"
        id="from-listbox"
        role="listbox"
        class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
    >
    </ul>
  </div>
</div>
`;

exports[`LocationField/Desktop Context Blank smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context GeocoderNoResults smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context GeocoderUnreachable smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context HereGeocoder smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context LocationUnavailable smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context NoAutoFocusWithMultipleControls smoke-test 1`] = `
<div>
  <input id="example"
         value="Enter text"
  >
  <button type="button">
    Click me!
  </button>
  <div class="styled__InputGroup-sc-xahsq2-7 erfoji"
       role="group"
  >
    <button aria-controls="from-listbox"
            aria-expanded="false"
            aria-label="Toggle displaying the list of suggested locations"
            tabindex="-1"
            class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
    >
      <svg viewbox="0 0 512 512"
           height="13"
           width="13"
           aria-hidden="true"
           focusable="false"
           fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
      >
        <path fill="currentColor"
              d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
        >
        </path>
      </svg>
    </button>
    <input aria-autocomplete="list"
           aria-controls="from-listbox"
           aria-expanded="false"
           aria-haspopup="listbox"
           aria-invalid="false"
           aria-label="Select from location"
           aria-required="false"
           class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
           placeholder="Select from location"
           role="combobox"
           value
    >
    <span role="status"
          class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
    >
    </span>
    <ul aria-hidden="true"
        aria-label="Suggested locations"
        id="from-listbox"
        role="listbox"
        class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
    >
    </ul>
  </div>
</div>
`;

exports[`LocationField/Desktop Context RequiredAndInvalidState smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="true"
         aria-label="Select from location"
         aria-required="true"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context SelectedLocation smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         placeholder="to"
         role="combobox"
         value="123 Main St"
  >
  <button aria-label="Clear location"
          class="styled__BaseButton-sc-xahsq2-1 styled__ClearButton-sc-xahsq2-2 hoozke cCkuXw"
  >
    <svg viewbox="0 0 320 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
    >
      <path fill="currentColor"
            d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3l105.4 105.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256l105.3-105.4z"
      >
      </path>
    </svg>
  </button>
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context SelectedLocationCustomClear smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         placeholder="to"
         role="combobox"
         value="123 Main St"
  >
  <button aria-label="Clear location"
          class="styled__BaseButton-sc-xahsq2-1 styled__ClearButton-sc-xahsq2-2 hoozke cCkuXw"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
    >
      <path fill="currentColor"
            d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
      >
      </path>
    </svg>
  </button>
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context SlowGeocoder smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithBadApiKeyHandlesBadAutocomplete smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithCustomResultColorsAndIcons smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithCustomResultsOrder smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 cgVWic"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 cowprk eGxygT"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf"
    >
      <path fill="currentColor"
            d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 naPtq from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 MJNFZ"
  >
  </span>
  <ul aria-hidden="false"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 bMzPj"
  >
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 bznUet">
      Other
    </h2>
    <li aria-live="off"
        id="otpui-locf-option-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 gDVIUA"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 kWnUkr source-openstreetmap layer-example_layer">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 hBmEeg">
          <svg viewbox="0 0 288 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO"
          >
            <path fill="currentColor"
                  d="M112 316.94v156.69l22.02 33.02c4.75 7.12 15.22 7.12 19.97 0L176 473.63V316.94c-10.39 1.92-21.06 3.06-32 3.06s-21.61-1.14-32-3.06zM144 0C64.47 0 0 64.47 0 144s64.47 144 144 144 144-64.47 144-144S223.53 0 144 0zm0 76c-37.5 0-68 30.5-68 68 0 6.62-5.38 12-12 12s-12-5.38-12-12c0-50.73 41.28-92 92-92 6.62 0 12 5.38 12 12s-5.38 12-12 12z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 eSPfYC">
          Whole Foods that is far away, but prioritized
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-1"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 gDVIUA"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 kWnUkr source-openstreetmap layer-venue">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 hBmEeg">
          <svg viewbox="0 0 288 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO"
          >
            <path fill="currentColor"
                  d="M112 316.94v156.69l22.02 33.02c4.75 7.12 15.22 7.12 19.97 0L176 473.63V316.94c-10.39 1.92-21.06 3.06-32 3.06s-21.61-1.14-32-3.06zM144 0C64.47 0 0 64.47 0 144s64.47 144 144 144 144-64.47 144-144S223.53 0 144 0zm0 76c-37.5 0-68 30.5-68 68 0 6.62-5.38 12-12 12s-12-5.38-12-12c0-50.73 41.28-92 92-92 6.62 0 12 5.38 12 12s-5.38 12-12 12z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 eSPfYC">
          Whole Foods Market
          <span class="styled__OptionSubTitle-sc-xahsq2-11 dmKYiB">
            <span class="styled__HiddenContent-sc-xahsq2-0 MJNFZ">
              ,
            </span>
            Broadway, First Hill, Seattle, WA
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-2"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 gDVIUA"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 kWnUkr source-openstreetmap layer-address">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 hBmEeg">
          <svg viewbox="0 0 288 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO"
          >
            <path fill="currentColor"
                  d="M112 316.94v156.69l22.02 33.02c4.75 7.12 15.22 7.12 19.97 0L176 473.63V316.94c-10.39 1.92-21.06 3.06-32 3.06s-21.61-1.14-32-3.06zM144 0C64.47 0 0 64.47 0 144s64.47 144 144 144 144-64.47 144-144S223.53 0 144 0zm0 76c-37.5 0-68 30.5-68 68 0 6.62-5.38 12-12 12s-12-5.38-12-12c0-50.73 41.28-92 92-92 6.62 0 12 5.38 12 12s-5.38 12-12 12z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 eSPfYC">
          2200 Westlake Avenue
          <span class="styled__OptionSubTitle-sc-xahsq2-11 dmKYiB">
            <span class="styled__HiddenContent-sc-xahsq2-0 MJNFZ">
              ,
            </span>
            Downtown Seattle, WA
          </span>
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 bzHnHp">
      Stations
    </h2>
    <li aria-live="off"
        id="otpui-locf-option-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 gDVIUA"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 kWnUkr operator-sound-transit source-transit layer-stations">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 hBmEeg"
              style="color: navy;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO"
          >
            <path fill="currentColor"
                  d="M488 128h-8V80c0-44.8-99.2-80-224-80S32 35.2 32 80v48h-8c-13.25 0-24 10.74-24 24v80c0 13.25 10.75 24 24 24h8v160c0 17.67 14.33 32 32 32v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h192v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h6.4c16 0 25.6-12.8 25.6-25.6V256h8c13.25 0 24-10.75 24-24v-80c0-13.26-10.75-24-24-24zM112 400c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32zm16-112c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h256c17.67 0 32 14.33 32 32v128c0 17.67-14.33 32-32 32H128zm272 112c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 eSPfYC">
          Union Station (Sound Transit Stop)
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 ydqhX">
      Stops
    </h2>
    <li aria-live="off"
        id="otpui-locf-option-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 gDVIUA"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 kWnUkr operator-wa-state-ferry source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 hBmEeg"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO"
          >
            <path fill="currentColor"
                  d="M488 128h-8V80c0-44.8-99.2-80-224-80S32 35.2 32 80v48h-8c-13.25 0-24 10.74-24 24v80c0 13.25 10.75 24 24 24h8v160c0 17.67 14.33 32 32 32v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h192v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h6.4c16 0 25.6-12.8 25.6-25.6V256h8c13.25 0 24-10.75 24-24v-80c0-13.26-10.75-24-24-24zM112 400c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32zm16-112c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h256c17.67 0 32 14.33 32 32v128c0 17.67-14.33 32-32 32H128zm272 112c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 eSPfYC">
          Clinton (WA State Ferry Stop)
          <span class="styled__OptionAltLabel-sc-xahsq2-12 gBwyZN">
            <span class="styled__HiddenContent-sc-xahsq2-0 MJNFZ">
              ,
            </span>
            Clinton Ferry Pier
          </span>
          <span class="styled__OptionAltLabel-sc-xahsq2-12 gBwyZN">
            <span class="styled__HiddenContent-sc-xahsq2-0 MJNFZ">
              ,
            </span>
            Another label
          </span>
          <span class="styled__OptionAltLabel-sc-xahsq2-12 gBwyZN">
            <span class="styled__HiddenContent-sc-xahsq2-0 MJNFZ">
              ,
            </span>
            Really just way too long a name I mean this name is just unconscionably long! Who would possibly approve a stop name this long
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-1"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 gDVIUA"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 kWnUkr operator-community-transit source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 hBmEeg"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO"
          >
            <path fill="currentColor"
                  d="M488 128h-8V80c0-44.8-99.2-80-224-80S32 35.2 32 80v48h-8c-13.25 0-24 10.74-24 24v80c0 13.25 10.75 24 24 24h8v160c0 17.67 14.33 32 32 32v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h192v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h6.4c16 0 25.6-12.8 25.6-25.6V256h8c13.25 0 24-10.75 24-24v-80c0-13.26-10.75-24-24-24zM112 400c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32zm16-112c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h256c17.67 0 32 14.33 32 32v128c0 17.67-14.33 32-32 32H128zm272 112c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 eSPfYC">
          Marine Dr NE &amp; 27th Ave NE (Community Transit Stop ID 1)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-2"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 gDVIUA"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 kWnUkr operator-community-transit source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 hBmEeg"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO"
          >
            <path fill="currentColor"
                  d="M488 128h-8V80c0-44.8-99.2-80-224-80S32 35.2 32 80v48h-8c-13.25 0-24 10.74-24 24v80c0 13.25 10.75 24 24 24h8v160c0 17.67 14.33 32 32 32v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h192v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h6.4c16 0 25.6-12.8 25.6-25.6V256h8c13.25 0 24-10.75 24-24v-80c0-13.26-10.75-24-24-24zM112 400c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32zm16-112c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h256c17.67 0 32 14.33 32 32v128c0 17.67-14.33 32-32 32H128zm272 112c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 eSPfYC">
          Marine Dr NE &amp; 23rd Ave NE (Community Transit Stop ID 7)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 gDVIUA"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 kWnUkr">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 hBmEeg">
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO"
          >
            <path fill="currentColor"
                  d="M444.52 3.52 28.74 195.42c-47.97 22.39-31.98 92.75 19.19 92.75h175.91v175.91c0 51.17 70.36 67.17 92.75 19.19l191.9-415.78c15.99-38.39-25.59-79.97-63.97-63.97z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 eSPfYC">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithPrefilledSearch smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="false"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iCLOrV">
      Stations
    </h2>
    <li aria-live="off"
        id="otpui-locf-option-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-sound-transit source-transit layer-stations">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: navy;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Union Station (Sound Transit Stop)
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 doQAFb">
      Stops
    </h2>
    <li aria-live="off"
        id="otpui-locf-option-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-wa-state-ferry source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Clinton (WA State Ferry Stop)
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Clinton Ferry Pier
          </span>
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Another label
          </span>
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Really just way too long a name I mean this name is just unconscionably long! Who would possibly approve a stop name this long
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-1"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-community-transit source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Marine Dr NE &amp; 27th Ave NE (Community Transit Stop ID 1)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-2"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-community-transit source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Marine Dr NE &amp; 23rd Ave NE (Community Transit Stop ID 7)
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      Other
    </h2>
    <li aria-live="off"
        id="otpui-locf-option-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-example_layer">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Whole Foods that is far away, but prioritized
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-1"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-venue">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Whole Foods Market
          <span class="styled__OptionSubTitle-sc-xahsq2-11 hMeBym">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Broadway, First Hill, Seattle, WA
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-2"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-address">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          2200 Westlake Avenue
          <span class="styled__OptionSubTitle-sc-xahsq2-11 hMeBym">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Downtown Seattle, WA
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="otpui-locf-option-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithUserSettings smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;
